--- a/gleam.toml
+++ b/gleam.toml
@@ -11,6 +11,7 @@ envoy = ">= 1.0.2 and < 2.0.0"
 glow_auth = ">= 1.0.1 and < 2.0.0"
 radiate = ">= 1.0.0 and < 2.0.0"
 gleam_httpc = ">= 5.0.0 and < 6.0.0"
+gleam_json = ">= 3.1.0 and < 4.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.3.0 and < 2.0.0"
