--- a/gleam.toml
+++ b/gleam.toml
@@ -15,6 +15,8 @@ gleam_json = ">= 3.1.0 and < 4.0.0"
 pog = ">= 4.1.0 and < 5.0.0"
 gleam_otp = ">= 1.2.0 and < 2.0.0"
 gleam_time = ">= 1.6.0 and < 2.0.0"
+simplifile = ">= 2.3.1 and < 3.0.0"
+youid = ">= 1.5.1 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.3.0 and < 2.0.0"
