Configured cloudflare tunneling for facebook bullshit. Done with login flow facebook/insta

--- a/devenv.yaml
+++ b/devenv.yaml
@@ -3,3 +3,5 @@ inputs:
     url: github:NixOS/nixpkgs/release-25.05
   gleam-pkgs:
     url: github:NixOS/nixpkgs/nixos-unstable
+
+allowUnfree: true
